Fix spacing in footer section

--- a/css/index.css
+++ b/css/index.css
@@ -53,6 +53,7 @@ footer {
 footer nav {
   width: 100%;
   padding: 1%;
+  padding-top: 1.6rem;
   display: flex;
   justify-content: space-evenly;
 }
@@ -71,6 +72,7 @@ footer .social-icons .icon {
 }
 footer .copyright {
   color: white;
+  padding-bottom: 1.6rem;
 }
 .home .top-content {
   text-align: center;
